--- a/requirements.txt
+++ b/requirements.txt
@@ -1,83 +1,28 @@
 APScheduler==3.6.3
-attrs==21.4.0
 cachetools==4.2.2
 certifi==2021.10.8
-charset-normalizer==2.0.11
+charset-normalizer==2.0.12
 click==7.1.2
 colorama==0.4.4
-colorlog==6.4.1
-coverage==5.5
-dateparser==1.1.0
-decorator==5.1.1
-docker==5.0.2
-ecdsa==0.17.0
-flake8==4.0.1
-flake8-annotations==2.7.0
-flake8-isort==4.1.1
-flake8-plugin-utils==1.3.2
-flake8-return==1.1.3
-gitdb==4.0.9
-GitPython==3.1.18
-googleapis-common-protos==1.54.0
-grpc-gateway-protoc-gen-openapiv2==0.1.0
-grpcio==1.40.0
-grpcio-tools==1.40.0
 HiYaPyCo==0.4.16
-humanfriendly==9.2
-hvac==0.11.0
 idna==3.3
-iniconfig==1.1.1
-isort==5.10.1
 Jinja2==2.11.3
-jsonschema==3.2.0
-kafka-python==2.0.2
 loguru==0.6.0
 MarkupSafe==2.0.1
-mccabe==0.6.1
-mypy-protobuf==2.4
-numpy==1.21.5
-packaging==21.3
-pluggy==1.0.0
-prometheus-api-client==0.0.1
-prometheus-client==0.11.0
-protobuf==3.17.3
-py==1.11.0
-pyasn1==0.4.8
-pycodestyle==2.8.0
-pyflakes==2.4.0
-pyparsing==3.0.7
-pyrsistent==0.18.1
-pytest==6.2.5
-pytest-mock==3.6.1
-python-dateutil==2.8.2
-python-gitlab==3.2.0
-python-jose==3.3.0
-python-keycloak==0.26.1
-python-slugify==5.0.2
+python-dotenv==0.20.0
 python-telegram-bot==13.11
 pytz==2022.1
 pytz-deprecation-shim==0.1.0.post0
-PyYAML==5.4.1
-regex==2022.1.18
+PyYAML==6.0
 requests==2.27.1
 requests-toolbelt==0.9.1
-responses==0.16.0
-retry==0.9.2
 retrying==1.3.3
-rsa==4.8
 schedule==1.1.0
-sentry-sdk==1.3.1
 shellingham==1.4.0
-si-prefix==1.2.2
 six==1.16.0
-smmap==5.0.0
-testfixtures==6.18.3
-text-unidecode==1.3
-toml==0.10.2
 tornado==6.1
 typer==0.3.2
 typer-cli==0.0.12
 tzdata==2022.1
 tzlocal==4.2
-urllib3==1.26.8
-websocket-client==1.2.3
+urllib3==1.26.9
